--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   }
   
   body {
-    @apply font-sans bg-primary text-light;
+    @apply font-sans bg-primary text-light overflow-x-hidden;
   }
   
   h1, h2, h3, h4, h5, h6 {
